--- a/KetchUPClient/app/src/main/res/layout/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/login_screen.xml
@@ -8,14 +8,15 @@
 
     <TextView
         android:id="@+id/textview_first4"
-        android:layout_width="259dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="260dp"
+        android:layout_height="66dp"
+        android:layout_marginBottom="700dp"
         android:fontFamily="sans-serif-condensed"
         android:text="KetchUp"
         android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
         android:textColor="#CD5454"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,11 +25,12 @@
         android:id="@+id/textview_first"
         android:layout_width="106dp"
         android:layout_height="37dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginBottom="450dp"
         android:fontFamily="sans-serif-black"
         android:text="Welcome!"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,13 +40,13 @@
         android:id="@+id/textview_first2"
         android:layout_width="106dp"
         android:layout_height="37dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="100dp"
         android:fontFamily="sans-serif-black"
         android:text="Email:"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.239"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,13 +54,13 @@
         android:id="@+id/textview_first3"
         android:layout_width="106dp"
         android:layout_height="37dp"
-        android:layout_marginTop="364dp"
+        android:layout_marginTop="430dp"
+        android:layout_marginEnd="100dp"
         android:fontFamily="sans-serif-black"
         android:text="Password:"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.298"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,60 +69,62 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
-        android:layout_marginBottom="132dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="20dp"
         android:backgroundTint="#CD5454"
         android:text="Login"
         app:iconTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/registerButton"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextContrastCheck" />
 
     <EditText
         android:id="@+id/passwordText"
         android:layout_width="214dp"
         android:layout_height="53dp"
-        android:layout_marginStart="93dp"
-        android:layout_marginEnd="108dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="300dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/loginButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_first3"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/emailText"
         android:layout_width="219dp"
         android:layout_height="57dp"
-        android:layout_marginStart="91dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginBottom="45dp"
+        android:layout_marginBottom="400dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/textview_first3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_first2"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginBottom="132dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="88dp"
         android:backgroundTint="#CD5454"
         android:text="Sign Up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/loginButton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498"
         tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
