--- a/KetchUPClient/app/src/main/res/layout-sw600dp/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-sw600dp/login_screen.xml
@@ -99,13 +99,14 @@
         android:layout_width="106dp"
         android:layout_height="37dp"
         android:layout_marginTop="272dp"
+        android:layout_marginEnd="100dp"
         android:fontFamily="sans-serif-black"
         android:text="User:"
         android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toTopOf="@+id/emailText"
         app:layout_constraintEnd_toEndOf="@+id/textview_first"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textview_first"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
