--- a/KetchUPClient/app/src/main/res/layout-land/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land/login_screen.xml
@@ -7,21 +7,21 @@
     tools:context=".LoginScreen">
 
     <EditText
-        android:id="@+id/passwordText"
+        android:id="@+id/passwordField"
         android:layout_width="214dp"
         android:layout_height="53dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/registerButton"
-        app:layout_constraintEnd_toEndOf="@+id/emailText"
+        app:layout_constraintBottom_toTopOf="@+id/signupButton"
+        app:layout_constraintEnd_toEndOf="@+id/usernameText"
         app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toStartOf="@+id/emailText"
-        app:layout_constraintTop_toBottomOf="@+id/textview_first3"
+        app:layout_constraintStart_toStartOf="@+id/usernameText"
+        app:layout_constraintTop_toBottomOf="@+id/passwordText"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/textview_first3"
+        android:id="@+id/passwordText"
         android:layout_width="104dp"
         android:layout_height="35dp"
         android:layout_marginTop="184dp"
@@ -29,12 +29,12 @@
         android:text="Password:"
         android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="@+id/textview_first2"
-        app:layout_constraintStart_toStartOf="@+id/textview_first2"
+        app:layout_constraintEnd_toEndOf="@+id/userText"
+        app:layout_constraintStart_toStartOf="@+id/userText"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textview_first2"
+        android:id="@+id/userText"
         android:layout_width="107dp"
         android:layout_height="40dp"
         android:layout_marginTop="68dp"
@@ -49,29 +49,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/emailText"
+        android:id="@+id/usernameText"
         android:layout_width="219dp"
         android:layout_height="57dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/textview_first3"
-        app:layout_constraintStart_toStartOf="@+id/textview_first2"
-        app:layout_constraintTop_toBottomOf="@+id/textview_first2"
+        app:layout_constraintBottom_toTopOf="@+id/passwordText"
+        app:layout_constraintStart_toStartOf="@+id/userText"
+        app:layout_constraintTop_toBottomOf="@+id/userText"
         app:layout_constraintVertical_bias="0.00999999"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/registerButton"
+        android:id="@+id/signupButton"
         android:layout_width="98dp"
         android:layout_height="48dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:backgroundTint="#CD5454"
         android:text="Sign Up"
-        app:layout_constraintEnd_toEndOf="@+id/passwordText"
+        app:layout_constraintEnd_toEndOf="@+id/passwordField"
         app:layout_constraintStart_toEndOf="@+id/loginButton"
-        app:layout_constraintTop_toBottomOf="@+id/passwordText"
+        app:layout_constraintTop_toBottomOf="@+id/passwordField"
         tools:ignore="TextContrastCheck" />
 
     <Button
@@ -82,13 +82,13 @@
         android:backgroundTint="#CD5454"
         android:text="Login"
         app:iconTint="#FFFFFF"
-        app:layout_constraintEnd_toStartOf="@+id/registerButton"
-        app:layout_constraintStart_toStartOf="@+id/passwordText"
-        app:layout_constraintTop_toTopOf="@+id/registerButton"
+        app:layout_constraintEnd_toStartOf="@+id/signupButton"
+        app:layout_constraintStart_toStartOf="@+id/passwordField"
+        app:layout_constraintTop_toTopOf="@+id/signupButton"
         tools:ignore="TextContrastCheck" />
 
     <TextView
-        android:id="@+id/textview_first"
+        android:id="@+id/welcomeText"
         android:layout_width="106dp"
         android:layout_height="37dp"
         android:fontFamily="sans-serif-black"
