Finished login and signup screens, with dark and light mode included

--- a/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/dark_color"
     android:layout_height="match_parent"
     tools:context=".RegisterScreen">
 
     <EditText
         android:id="@+id/passwordRepSignField"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="53dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
+        android:autofillHints=""
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
@@ -19,17 +21,18 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/passwordSingField"
         app:layout_constraintTop_toBottomOf="@+id/passwordSingField"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/passwordSingField"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="53dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
+        android:autofillHints=""
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
@@ -40,72 +43,72 @@
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
         app:layout_constraintEnd_toEndOf="@+id/userSingField"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/userSingField"
         app:layout_constraintTop_toBottomOf="@+id/userSingField"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/userSingField"
-        android:layout_width="0dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="120dp"
+        android:layout_width="300dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
         android:autofillHints=""
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/username_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Choose your username"
-        android:inputType="textEmailAddress"
+        android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
-        app:layout_constraintEnd_toEndOf="@+id/singnupText"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/singnupText"
-        app:layout_constraintTop_toBottomOf="@+id/singnupText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.83"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/signupButton"
         android:layout_width="0dp"
         android:layout_height="54dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="50dp"
         android:backgroundTint="#CD5454"
         android:fontFamily="@font/patua_one"
         android:text="Sign Up"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/singnupText"
+        app:layout_constraintEnd_toEndOf="@+id/passwordRepSignField"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/singnupText"
+        app:layout_constraintStart_toStartOf="@+id/passwordRepSignField"
         app:layout_constraintTop_toBottomOf="@+id/passwordRepSignField"
-        app:layout_constraintVertical_bias="0.0"
         tools:ignore="TextContrastCheck" />
-
-    <TextView
-        android:id="@+id/singnupText"
-        android:layout_width="0dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/patua_one"
-        android:text="Create a new account:"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBottom_toTopOf="@+id/userSingField"
-        app:layout_constraintEnd_toEndOf="@+id/appLogo"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="@+id/appLogo"
-        app:layout_constraintTop_toBottomOf="@+id/appLogo" />
 
     <ImageView
         android:id="@+id/appLogo"
         android:layout_width="309dp"
         android:layout_height="107dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.118"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
+
+    <TextView
+        android:id="@+id/singnupText"
+        android:layout_width="228dp"
+        android:layout_height="40dp"
+        android:fontFamily="@font/patua_one"
+        android:text="Create a new account:"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/appLogo"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="@+id/appLogo"
+        app:layout_constraintTop_toBottomOf="@+id/appLogo"
+        app:layout_constraintVertical_bias="0.19" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
