--- a/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/dark_color"
     android:layout_height="match_parent"
     tools:context=".LoginScreen">
 
@@ -19,6 +20,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/usernameText"
         app:layout_constraintHorizontal_bias="0.2"
@@ -39,6 +41,7 @@
         android:hint="Username"
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.84"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +56,7 @@
         android:layout_marginTop="30dp"
         android:backgroundTint="#CD5454"
         android:text="Sign Up"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/passwordField"
         app:layout_constraintStart_toEndOf="@+id/loginButton"
         app:layout_constraintTop_toBottomOf="@+id/passwordField"
@@ -65,6 +69,7 @@
         android:layout_marginEnd="20dp"
         android:backgroundTint="#CD5454"
         android:text="Login"
+        android:textColor="@color/white"
         app:iconTint="#FFFFFF"
         app:layout_constraintEnd_toStartOf="@+id/signupButton"
         app:layout_constraintStart_toStartOf="@+id/passwordField"
@@ -77,6 +82,7 @@
         android:layout_height="37dp"
         android:fontFamily="sans-serif-black"
         android:text="Welcome!"
+        android:textColor="@color/white"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
