--- a/KetchUPClient/app/src/main/res/layout-land/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land/activity_register_screen.xml
@@ -8,91 +8,71 @@
 
     <EditText
         android:id="@+id/passwordRepSignField"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="53dp"
+        android:layout_marginBottom="10dp"
         android:autofillHints=""
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/password_icon_light"
+        android:drawablePadding="10dp"
         android:ems="10"
+        android:hint="Please repeat your password"
         android:inputType="textPassword"
+        android:paddingStart="10dp"
+        android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
-        app:layout_constraintStart_toStartOf="@+id/passwordRepText"
-        app:layout_constraintTop_toBottomOf="@+id/passwordRepText"
+        app:layout_constraintStart_toStartOf="@+id/passwordSingField"
+        app:layout_constraintTop_toBottomOf="@+id/passwordSingField"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/passwordSingField"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="53dp"
+        android:layout_marginBottom="10dp"
         android:autofillHints=""
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/password_icon_light"
+        android:drawablePadding="10dp"
         android:ems="10"
+        android:hint="Choose your password"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/passwordSingText"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/passwordSingText"
-        app:layout_constraintTop_toBottomOf="@+id/passwordSingText"
+        android:paddingStart="10dp"
+        android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
+        app:layout_constraintEnd_toEndOf="@+id/userSingField"
+        app:layout_constraintStart_toStartOf="@+id/userSingField"
+        app:layout_constraintTop_toBottomOf="@+id/userSingField"
         tools:ignore="SpeakableTextPresentCheck" />
-
-    <TextView
-        android:id="@+id/passwordRepText"
-        android:layout_width="297dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/patua_one"
-        android:text="Please repeat your password:"
-        android:textAlignment="textStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
-        app:layout_constraintHorizontal_bias="0.024"
-        app:layout_constraintStart_toStartOf="@+id/passwordSingField"
-        app:layout_constraintTop_toBottomOf="@+id/passwordSingField" />
 
     <EditText
         android:id="@+id/userSingField"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="53dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
         android:autofillHints=""
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/username_icon_light"
+        android:drawablePadding="10dp"
         android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="@+id/userSignText"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/userSignText"
-        app:layout_constraintTop_toBottomOf="@+id/userSignText"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <TextView
-        android:id="@+id/userSignText"
-        android:layout_width="264dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="50dp"
-        android:fontFamily="@font/patua_one"
-        android:text="Please choose a username:"
-        android:textAlignment="textStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:hint="Choose your username"
+        android:inputType="textNoSuggestions"
+        android:paddingStart="10dp"
+        android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.886"
+        app:layout_constraintHorizontal_bias="0.83"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/passwordSingText"
-        android:layout_width="260dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/patua_one"
-        android:text="Please choose a password:"
-        android:textAlignment="textStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="@+id/userSingField"
-        app:layout_constraintHorizontal_bias="0.048"
-        app:layout_constraintStart_toStartOf="@+id/userSingField"
-        app:layout_constraintTop_toBottomOf="@+id/userSingField" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/signupButton"
         android:layout_width="0dp"
         android:layout_height="54dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="50dp"
         android:backgroundTint="#CD5454"
         android:fontFamily="@font/patua_one"
         android:text="Sign Up"
