--- a/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2E2E2E"
+    android:background="@color/dark_color"
     tools:context=".LoginScreen">
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="200dp"
-        android:backgroundTint="#CD5454"
+        android:backgroundTint="#EF5252"
         android:fontFamily="@font/patua_one"
         android:text="Login"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         app:iconTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/signupButton"
@@ -27,15 +27,23 @@
 
     <EditText
         android:id="@+id/usernameText"
-        android:layout_width="219dp"
+        android:layout_width="270dp"
         android:layout_height="57dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="10dp"
         android:autofillHints=""
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/username_icon_light"
+        android:drawablePadding="10dp"
         android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/passwordText"
+        android:hint="Username"
+        android:inputType="textNoSuggestions"
+        android:paddingStart="10dp"
+        android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/passwordField"
         app:layout_constraintEnd_toEndOf="@+id/welcomeText"
         app:layout_constraintStart_toStartOf="@+id/welcomeText"
-        app:layout_constraintTop_toBottomOf="@+id/userText"
+        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
@@ -43,67 +51,43 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:autofillHints=""
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/password_icon_light"
+        android:drawablePadding="10dp"
         android:ems="10"
+        android:hint="Password"
+        android:textColorHint="@color/black"
         android:inputType="textPassword"
+        android:paddingStart="10dp"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="@+id/usernameText"
-        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="@+id/usernameText"
-        app:layout_constraintTop_toBottomOf="@+id/passwordText"
+        app:layout_constraintTop_toBottomOf="@+id/usernameText"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/welcomeText"
         android:layout_width="106dp"
         android:layout_height="37dp"
+        android:layout_marginTop="70dp"
         android:fontFamily="@font/patua_one"
         android:text="Welcome!"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBottom_toTopOf="@+id/userText"
+        app:layout_constraintBottom_toTopOf="@+id/usernameText"
         app:layout_constraintEnd_toEndOf="@+id/appLogo"
         app:layout_constraintStart_toStartOf="@+id/appLogo"
         app:layout_constraintTop_toBottomOf="@+id/appLogo" />
 
-    <TextView
-        android:id="@+id/passwordText"
-        android:layout_width="106dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="404dp"
-        android:fontFamily="@font/patua_one"
-        android:text="Password:"
-        android:textAlignment="textStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBottom_toTopOf="@+id/passwordField"
-        app:layout_constraintEnd_toEndOf="@+id/userText"
-        app:layout_constraintHorizontal_bias="0.44"
-        app:layout_constraintStart_toStartOf="@+id/userText"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/userText"
-        android:layout_width="106dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="272dp"
-        android:fontFamily="@font/patua_one"
-        android:text="User:"
-        android:textAlignment="textStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBottom_toTopOf="@+id/usernameText"
-        app:layout_constraintEnd_toEndOf="@+id/welcomeText"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/usernameText"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/signupButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:backgroundTint="#CD5454"
+        android:backgroundTint="#EF5252"
         android:fontFamily="@font/patua_one"
         android:text="Sign Up"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/passwordField"
         app:layout_constraintStart_toEndOf="@+id/loginButton"
         app:layout_constraintTop_toTopOf="@+id/loginButton"
