--- a/KetchUPClient/app/src/main/res/values/themes.xml
+++ b/KetchUPClient/app/src/main/res/values/themes.xml
@@ -15,6 +15,6 @@
     </style>
     <style name="splashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
             <item name="android:windowBackground">@drawable/splash_image</item>
-            <item name="android:statusBarColor">@color/black</item>
+            <item name="android:statusBarColor">#C6C6C6</item>
     </style>
 </resources>
