--- a/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
@@ -21,6 +21,7 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
         app:layout_constraintStart_toStartOf="@+id/passwordSingField"
@@ -41,6 +42,7 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
         app:layout_constraintEnd_toEndOf="@+id/userSingField"
         app:layout_constraintStart_toStartOf="@+id/userSingField"
@@ -62,6 +64,7 @@
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.83"
