--- a/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
@@ -21,6 +21,7 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/usernameText"
         app:layout_constraintHorizontal_bias="0.2"
@@ -42,6 +43,7 @@
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.84"
         app:layout_constraintStart_toStartOf="parent"
