--- a/KetchUPClient/app/src/main/res/layout-night/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/activity_register_screen.xml
@@ -20,6 +20,7 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/passwordSingField"
@@ -39,6 +40,7 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
         app:layout_constraintEnd_toEndOf="@+id/userSingField"
         app:layout_constraintHorizontal_bias="0.0"
@@ -60,6 +62,7 @@
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
         app:layout_constraintEnd_toEndOf="@+id/singnupText"
         app:layout_constraintHorizontal_bias="0.0"
