--- a/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
@@ -39,6 +39,7 @@
         android:hint="Username"
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
+        android:textColor="@color/black"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordField"
         app:layout_constraintEnd_toEndOf="@+id/welcomeText"
@@ -57,6 +58,7 @@
         android:ems="10"
         android:hint="Password"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         android:inputType="textPassword"
         android:paddingStart="10dp"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
